Login process and omniAuth

--- a/OGV/client/templates/authentication/login.html
+++ b/OGV/client/templates/authentication/login.html
@@ -7,6 +7,16 @@
 			<input class= "primary-input password" id="log-in-password" type="password" name="password" placeholder="password">
 			<button class="btn btn-default primary-input primary-btn" type="submit"> Log In </button>
 		</form>
+			<h4 class="meta-links" align="center" style="color:#e74c3c">OR SIGN IN WITH</h4>
+			
+			<div align="center">
+	        	<img id="loginGoogle" src="/icons/google-plus.png" width="50px" height="50px"/>
+	        	<img id="loginFacebook" src="/icons/facebook.png" width="50px" height="50px"/>
+	        	<!-- <img id="loginTwitter" src="/icons/twitter.png" width="46px" height="46px"/>  -->
+	        	<img id="loginGithub" src="/icons/github.png" width="50px" height="50px"/>
+	        	<!-- {{> loginButtons}} -->
+			</div>	 
+
 		<a class = "meta-links" id="show-forgot-password" href="/forgot-password" > Forgot Password </a>
 		<a class = "meta-links" id="show-sign-up" href="/sign-up" > Sign Up </a>
 	</div>
