--- a/OGV/client/templates/authentication/login.html
+++ b/OGV/client/templates/authentication/login.html
@@ -12,8 +12,8 @@
 			<div align="center">
 	        	<img id="loginGoogle" src="/icons/google-plus.png" width="50px" height="50px"/>
 	        	<img id="loginFacebook" src="/icons/facebook.png" width="50px" height="50px"/>
-	        	<!-- <img id="loginTwitter" src="/icons/twitter.png" width="46px" height="46px"/>  -->
 	        	<img id="loginGithub" src="/icons/github.png" width="50px" height="50px"/>
+	        	<!-- Uncomment the line below while configuring 3rd party login -->
 	        	<!-- {{> loginButtons}} -->
 			</div>	 
 
