--- a/OGV/client/templates/cfs_uploader.html
+++ b/OGV/client/templates/cfs_uploader.html
@@ -1,13 +1,15 @@
 <template name="cfsUploader">
-	<h2> Upload File </h2>
+	<div class="container">
+		<h2> Upload File </h2>
 
-	<p class = "help-text"> Add .g file that you want to upload </p>
-	<input type="file" class="form-control" id="fileInput" accept=".g"/>
+		<p class = "help-text"> Add .g file that you want to upload </p>
+		<input type="file" class="form-control" id="fileInput" accept=".g"/>
 
 
-	<div id="dropzone" class="dropzone">
-		<div class="dropzone-text">Drag and Drop your model here to upload</div>
-        </div>
+		<div id="dropzone" class="dropzone">
+			<div class="dropzone-text">Drag and Drop your model here to upload</div>
+	    </div>
+    </div>
 </template>
 
 
