--- a/OGV/client/templates/filemanager.html
+++ b/OGV/client/templates/filemanager.html
@@ -1,5 +1,5 @@
-<template name="Filemanager">
-    <div class="modelsList container-fluid">
+<template name="filemanager">
+    <div class="modelsList container">
 	<h1>My models</h1>
 	<div class = "models row">
 	{{#each models}}
@@ -12,8 +12,8 @@
 </template>
 
 <template name ="aboutModel">
-     <div class="model-file .col-xs-3">
-	{{> modelView }}
-     </div>
+    <div class="model-file .col-xs-3">
+        {{> modelView }}
+    </div>
 </template>
 
