smooth movement, add axes-grid and view wireframe buttons added - backend

--- a/OGV/client/templates/model_viewer.html
+++ b/OGV/client/templates/model_viewer.html
@@ -34,6 +34,16 @@
 			<img src="/icons/Link.png" width="35px" height="35px">
 			<p class="sm-menu-text">Embed</p>
 		</div>
+
+		<div class="sm-item" id="sm-item-grid">
+			<img src="/icons/Link.png" width="35px" height="35px">
+			<p class="sm-menu-text">Grid</p>
+		</div>
+
+		<div class="sm-item" id="sm-item-wireframe">
+			<img src="/icons/wireframe.png" width="35px" height="35px">
+			<p class="sm-menu-text">Wireframe</p>
+		</div>
 	</div>
 	</div>
 </template>
