--- a/OGV/client/templates/feedback.html
+++ b/OGV/client/templates/feedback.html
@@ -15,7 +15,8 @@ Tell us how we can improve our website <br>
 	    <option value="num5">I love OGV</option>
 	    <option value="num6">Others - General Feedback</option>
 	</select><br>
-    <strong>Message</strong> <br><input type="text" name="message" style="width: 300px; height:100px"><br>    
+    <strong>Message</strong> <br>
+	<textarea name="message" form="feedForm" style="width: 300px; height: 100px;"></textarea>
 	<p style="font-size:80%">*All fields are compulsory to fill</p>
     <button class="btn primary-btn btn-default" type="submit">Send</button>
 </form>
