--- a/OGV/client/templates/cfs_uploader.html
+++ b/OGV/client/templates/cfs_uploader.html
@@ -3,8 +3,7 @@
 		<h2> Upload File </h2>
 
 		<p class = "help-text"> Add .g file that you want to upload </p>
-		<input type="file" class="form-control" id="fileInput" accept=".g"/>
-
+		<input type="file" class="form-control" id="fileInput" accept=".g"/><br />
 
 		<div id="dropzone" class="dropzone">
 			<div class="dropzone-text">Drag and Drop your model here to upload</div>
