added dat.gui functionality in model-viewer

--- a/OGV/client/templates/model_viewer.html
+++ b/OGV/client/templates/model_viewer.html
@@ -13,6 +13,10 @@
 	    {{/if}}
 	</div>
 	</div>
+	
+
+	
+
 	<div id="model-container">
 	<div class="secondary-menu">
 		<div class="sm-item" id="sm-item-download">
@@ -45,5 +49,16 @@
 			<p class="sm-menu-text">Wireframe</p>
 		</div>
 	</div>
+	<div id="controller" >
+	
 	</div>
+	</div>
+
+	<style>
+		#controller {
+			position: fixed;
+    		top: 8%;
+    		right: 2%;
+		}
+	</style>
 </template>
