--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -12,6 +12,8 @@ body {
 	font-size:16px;
     overflow-x: hidden;
     line-height: 1.4;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 a {
@@ -875,8 +877,7 @@ input:focus {
 
 #slide-4 {
     background-color: #FAF9F9;
-    padding: 4em;
-    border-bottom: 1px dashed #D2D7D3;    
+    padding-top: 35px;
 }
 
     .image-row {
