Added different views to view model

--- a/OGV/client/templates/model_feed.html
+++ b/OGV/client/templates/model_feed.html
@@ -1,5 +1,6 @@
 <template name = "modelFeed">
-    <div class="feed-wrapper">
+    <div class="container feed-wrapper">
+    <h1 class="modelHeading">Models</h1><br />
     {{#if models}}
 	{{#each models}}
 	    {{#if converted }}
