--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -393,12 +393,16 @@ input:focus {
 }
 
 .feed-wrapper{
-     font-size: 14px;
+    font-size: 14px;
 	color: #555;
 	margin-left: 5px;
 	line-height: 1.5;   
 	max-width: 700px;
-    margin:50px auto 50px auto;
+    margin:30px auto 30px auto;
+}
+
+.modelHeading {
+    color: #2C2B34;
 }
 
 .feed-item {
@@ -846,6 +850,7 @@ input:focus {
     .heading-slide-3 {
         font-size: 55px;
         color: #F03B5B;
+        padding-bottom: 10px;
     }
 
     #slide-3 h1 {
