Header now more resposive

--- a/OGV/client/templates/menu.html
+++ b/OGV/client/templates/menu.html
@@ -1,6 +1,6 @@
 <template name = "menu">
 	<header class = "universal-header">
-		<div class = "page-container">
+		<div class = "page-container container">
 			<a class="logo" id="header-logo" href="/"> OGV </a>
 			<span class = "right-menu">			
 				<a class="rm-item" id="models-icon" title="Models" href ="/models"> <img src="/icons/collection.png" width="30px" height="30px"/></a>  
