--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -75,12 +75,17 @@ h2 {
 
 .universal-header {
 	width:100%;
-	height: 40px;
+	height: 43px;
 	background:#333;
 	position:fixed;
 	top:0;
 	z-index:1000;
 }
+    @media (max-width: 350px) {
+        .universal-header {
+            height: 95px;
+        }                       
+    }
 
 #header-logo {
 	font-family:'Megrim',cursive;
@@ -93,11 +98,23 @@ h2 {
 	color:#fff;
 	text-shadow:1px 1px rgba(0,0,0,0.5);
 }
+    @media (max-width: 350px) {
+        #header-logo {
+            padding:4px 3px;
+            height: 50px;
+        }        
+    }
 
 #header-logo:hover {
 	text-decoration:none;
     height: 54px;
 }
+    @media (max-width: 350px) {
+        #header-logo:hover {
+            height: 50px;
+        }
+    }
+
 .right-menu {
 	float:right;
 	line-height:40px;	
