--- a/OGV/client/templates/model_viewer.html
+++ b/OGV/client/templates/model_viewer.html
@@ -34,6 +34,15 @@
 			<img src="/icons/Link.png" width="35px" height="35px">
 			<p class="sm-menu-text">Embed</p>
 		</div>
+		<div class="keyboard-shortcuts" id="">
+      		<div class="keyboard">
+        		<div><i class="letter" id="letter-text-t">T</i><span class="letter-text">Top View</span></div>
+		        <div><i class="letter" id="letter-text-r">R</i><span class="letter-text">Rear View</span></div>
+		        <div><i class="letter" id="letter-text-f">F</i><span class="letter-text">Front View</span></div>
+		        <div><i class="letter" id="letter-text-b">B</i><span class="letter-text">Bottom View</span></div>
+		        <div><i class="letter" id="letter-text-n">N</i><span class="letter-text">Normal View</span></div>
+      		</div>
+    	</div>		
 	</div>
 	</div>
 </template>
