Changed my-models sub-heading

--- a/OGV/client/templates/filemanager.html
+++ b/OGV/client/templates/filemanager.html
@@ -9,7 +9,7 @@
 			{{/if}}
 		{{/each}}
 	{{else}}
-		<h3>OGV is hungry, <a href="/upload">feed some models</a></h3>
+		<h3>No models have been fed by you, <a href="/upload">feed something to OGV</a></h3>
 	{{/if}}
 	</div>
     </div>
