--- a/OGV/client/styles/styles.css
+++ b/OGV/client/styles/styles.css
@@ -618,31 +618,31 @@ input:focus {
 }
 
 .keyboard-shortcuts .keyboard #letter-text-t {
-    top: 106.5%;
+    top: 100.5%;
     left: 40%;
     position: absolute;
 }
 
 .keyboard-shortcuts .keyboard #letter-text-r {
-    top: 112%;
+    top: 106%;
     left: 64.5%;
     position: absolute;
 }
 
 .keyboard-shortcuts .keyboard #letter-text-b {
-    top: 112%;
+    top: 106%;
     left: 40%;
     position: absolute;
 }
 
 .keyboard-shortcuts .keyboard #letter-text-f {
-    top: 112%;
+    top: 106%;
     left: 14.5%;
     position: absolute;
 }
 
 .keyboard-shortcuts .keyboard #letter-text-n {
-    top: 117.5%;
+    top: 111.5%;
     left: 40%;
     position: absolute;
 }
@@ -652,7 +652,7 @@ input:focus {
     }
 
     .keyboard-shortcuts:hover .keyboard{
-        margin: 2em 0em 0em 0em;
+        margin: 1.2em 0em 0em 0em;
         -webkit-transition: all 300ms cubic-bezier(0.175, 0.885, 0.335, 1.05);
         -moz-transition: all 300ms cubic-bezier(0.175, 0.885, 0.335, 1.05);
         -o-transition: all 300ms cubic-bezier(0.175, 0.885, 0.335, 1.05);
@@ -675,7 +675,7 @@ input:focus {
 
     .keyboard-shortcuts:hover #letter-text-t {
         top: 69.5%;
-        left: 20%%;
+        left: 20%;
         position: absolute;
     }
 
