--- a/OGV/client/templates/404.html
+++ b/OGV/client/templates/404.html
@@ -1,4 +1,8 @@
 <template name="notFound">
-	<!-- 404 Page | In progress-->
-	<h1>This page development is in progress.....</h1>
+  <section class="error-page">
+  <div class="container">
+    <h1 class="four-oh-four">404</h1>
+      <h3 class="error-text">Page your are looking can't be found</h3>
+  </div>
+  </section>
 </template>
